# strik-experimental

./: .editorconfig  .gitignore  .hlint.yaml  Cargo.toml  Makefile  README.md  cabal.project  pyproject.toml
.github/workflows/: doc.yml  gh-pages.yml  haskell.yml
doc/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  astro.config.mjs  design  package-lock.json  package.json  tsconfig.json
doc/design/: Code Examples.md  Frontend Design.md  Road Map.md
doc/design/Frontend/: Grammar.md  Implementation Class.md  Layout.md  Lexical Syntax.md  Scope Resolution.md  Type System.md
doc/design/Frontend/Entity/: Auto Layout.md  Fixity Resolution.md  Named Tuple.md  Variant.md  Visibility.md
doc/design/Frontend/Idea/: 2023-09 Block.md  2023-09 Next Generation FFI like RPC.md  2023-09 Phase 1 Grammar.md  2023-09 Phase 1 Lexical Syntax.md  2023-09 Phase 1 Syntax.md  2023-09 Use & Pub.md  2023-09 Where.md  2023-10 String Literal.md  2023-11 Named Tuple & Record.md
doc/spec/: .gitignore  Makefile  main.tex  pyproject.toml  title.tex  tlmgr_requirement.bash
doc/spec/chapter/: introduction.tex  kernel.tex  machine.tex  preface.tex  preliminaries.tex  reference.bib  syntactic-resolution.tex  syntax.tex  type-system.tex
doc/spec/config/: common.tex  macro.tex  math.tex
doc/spec/public/: index.html
doc/spec/section/: abstract.tex  kernel.tex  machine.tex  preliminaries.tex  syntax.tex  type-system.tex
doc/spec/source/: conf.py  index.rst
doc/spec/source/article/: evaluate_semantics.rst  knowledge.rst  syntax.rst
doc/src/layouts/: Layout.astro  MarkdownLayout.astro
doc/src/pages/: design.astro  index.astro
doc/src/pages/design/: Code Examples.md
doc/src/pages/design/Frontend/Entity/: Block.md  Function.md  Keyword.md  Pattern.md  Record.md  Suspension.md  View.md
doc/src/pages/design/Frontend/Idea/: 2023-09 Phase 1 Lexical Syntax.md  2023-09 Recursive Definition.md  2023-09 Suspension.md  2023-10 Quantification.md
example/: list.qq
package/compiler/: quell-compiler.cabal
package/compiler/app/: Compiler.hs  Interpreter.hs
package/compiler/src/Language/Quell/Data/: Bag.hs  BufferedConduit.hs  BufferedConduitT.hs  STBuffer.hs
package/compiler/src/Language/Quell/Parsing/: Lexer.hs  Parser.hs  Parser.y  Runner.hs  Spanned.hs
package/quell-ast/: CHANGELOG.md  quell-ast.cabal
package/quell-ast/src/Language/Quell/Frontend/Data/: ParsedAst.hs  Token.hs
package/quell-ast/test/: Main.hs
package/quell-codegen/: CHANGELOG.md  quell-codegen.cabal
package/quell-desugar/: CHANGELOG.md  quell-desugar.cabal
package/quell-ir/: CHANGELOG.md  quell-ir.cabal
package/quell-irgen/: quell-irgen.cabal
package/quell-parser/: CHANGELOG.md  Setup.hs  quell-parser.cabal
package/quell-parser/src/Language/Quell/Lexer/: CodeUnit.hs  Lexing.hs  Rules.hs
package/quell-parser/src/Language/Quell/Parsing/: Spanned.hs
package/quell-parser/src/Language/Quell/Parsing/Lexer/: CodeUnit.hs  Input.hs  Lexing.hs  Rules.hs
package/quell-parser/src/Language/Quell/Parsing/Lexer/Lexing/: CommentLexing.hs  CommentRules.hs  KeywordLexing.hs  KeywordRules.hs  NumberLexing.hs  NumberRules.hs  StringLexing.hs  StringRules.hs
package/quell-parser/src/Language/Quell/Parsing/Parser/: AstParsedTag.hs  Layout.hs  LiftTypes.hs  Rules.hs
package/quell-parser/test/: Main.hs
package/quell-parser/test/spec/Language/Quell/Parsing/Lexer/: CodeUnitSpec.hs
package/quell-prelude/: CHANGELOG.md  quell-prelude.cabal
package/quell-prelude/src/Language/Quell/Data/: Bag.hs  BufferedConduit.hs  TextId.hs
package/quell-prelude/src/Language/Quell/Data/Mutable/: STBuffer.hs
package/quell-prelude/src/Language/Quell/Model/: Error.hs  ErrorCode.hs
package/quell-prelude/src/Language/Quell/Prelude/: Core.hs  Debug.hs
package/quell-prelude/test/spec/Language/Quell/Data/: BufferedConduitSpec.hs
package/quell-prelude/test/spec/Language/Quell/Data/Mutable/: STBufferSpec.hs
package/quell-runtime/: Cargo.toml
package/quell-typechecker/: CHANGELOG.md  quell-typechecker.cabal
package/strik-ast/: strik-ast.cabal
package/strik-ast/src/Language/Strik/Frontend/Data/: ParsedAst.hs  Token.hs
package/strik-ast/test/: Main.hs
package/strik-codegen/: strik-codegen.cabal
package/strik-ir/: strik-ir.cabal
package/strik-irgen/: strik-irgen.cabal
package/strik-parser/: Setup.hs  strik-parser.cabal
package/strik-parser/src/Language/Strik/Parsing/: Spanned.hs
package/strik-parser/src/Language/Strik/Parsing/Lexer/: CodeUnit.hs  Input.hs  Lexing.hs  Rules.hs
package/strik-parser/src/Language/Strik/Parsing/Lexer/Lexing/: CommentLexing.hs  CommentRules.hs  KeywordLexing.hs  KeywordRules.hs  NumberLexing.hs  NumberRules.hs  StringLexing.hs  StringRules.hs
package/strik-parser/src/Language/Strik/Parsing/Parser/: AstParsedTag.hs  Layout.hs  LiftTypes.hs  Rules.hs
package/strik-parser/test/spec/Language/Strik/Parsing/Lexer/: CodeUnitSpec.hs  LexingSpec.hs
package/strik-prelude/: strik-prelude.cabal
package/strik-prelude/src/Language/Strik/: Prelude.hs
package/strik-prelude/src/Language/Strik/Data/: Bag.hs  BufferedConduit.hs  TextId.hs
package/strik-prelude/src/Language/Strik/Data/Monad/: MonadST.hs
package/strik-prelude/src/Language/Strik/Data/Mutable/: STBuffer.hs
package/strik-prelude/src/Language/Strik/Data/Unlifted/: MutInt.hs
package/strik-prelude/src/Language/Strik/Model/: Error.hs  ErrorCode.hs
package/strik-prelude/src/Language/Strik/Prelude/: Core.hs  Debug.hs  Literal.hs  MonoTraversableM.hs  Text.hs
package/strik-prelude/test/spec/Language/Strik/Data/: BufferedConduitSpec.hs
package/strik-prelude/test/spec/Language/Strik/Data/Mutable/: STBufferSpec.hs
package/strik-prelude/test/spec/Language/Strik/Data/Unlifted/: MutIntSpec.hs
package/strik-runtime/: Cargo.toml
package/strik-typechecker/: strik-typechecker.cabal
script/: format.sh  lint-fix.bash
tool/vscode/language-quell/: README.md  language-configuration.json  package.json
tool/vscode/language-quell/syntaxes/: quell.tmBundle.json  quell.tmLanguage.json
(+34 files in other folders)
