[tool.poetry]
name = "strik"
version = "0.1.0"
description = ""
authors = ["Mizunashi Mana <contact@mizunashi.work>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4"

[tool.poetry.dev-dependencies]
sphinx = "*"
sphinx-autobuild = "*"
sphinxcontrib-katex = "*"
sphinxcontrib-bibtex = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
