cabal-version:      3.4
name:               quell-ast
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Mizunashi Mana
maintainer:         contact@mizunashi.work
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options:
        -Wall
        -Wcompat
        -Wincomplete-uni-patterns
        -Wmonomorphism-restriction
        -Wpartial-fields

common language
    default-language: GHC2021
    default-extensions:
        NoImplicitPrelude
        NoCUSKs
        NoStarIsType

        BlockArguments
        FunctionalDependencies
        LambdaCase
        MagicHash
        Strict
        TypeFamilies

library
    import:
        warnings,
        language,

    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   src

    build-depends:
        base ^>=4.18.0.0,
        quell-prelude,

    exposed-modules:
        Language.Quell.Frontend.Data.Token
        Language.Quell.Frontend.Data.ParsedAst

test-suite quell-ast-test
    import:
        warnings,
        language,

    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.0.0,
        quell-ast,
        quell-prelude,
