cabal-version:      3.4
name:               quell-parser
version:            0.1.0.0

synopsis:           A parser implementation of Quell
-- description:

license:            Apache-2.0
license-file:       LICENSE

author:             Mizunashi Mana
maintainer:         contact@mizunashi.work
copyright:          Mizunashi Mana <contact@mizunashi.work>

category:           Language
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options:
        -Wall
        -Wcompat
        -Wincomplete-uni-patterns
        -Wmonomorphism-restriction
        -Wpartial-fields

common language
    default-language: GHC2021
    default-extensions:
        NoImplicitPrelude
        NoCUSKs
        NoStarIsType

        BlockArguments
        LambdaCase
        MagicHash
        Strict
        TypeFamilies

library
    import:
        warnings,
        language,

    hs-source-dirs:   src

    build-depends:
        base             ^>=4.18.0.0,
        tlex             ^>=0.4.0,
        tlex-encoding    ^>=0.4.0,
        tlex-th          ^>=0.4.1,
        ptera            ^>=0.4.0,
        ptera-th         ^>=0.7.0,
        enummapset       ^>=0.7.1,
        template-haskell ^>=2.20.0,

        quell-prelude,
        quell-ast,

    exposed-modules:
        Language.Quell.Lexer.Rules
        Language.Quell.Lexer.CodeUnit

test-suite quell-parser-test
    import:
        warnings,
        language,

    type:             exitcode-stdio-1.0

    hs-source-dirs:   test
    main-is:          Main.hs

    build-depends:
        quell-prelude,
        quell-parser
