cabal-version:      3.4
name:               quell-parser
version:            0.1.0.0

synopsis:           A parser implementation of Quell
-- description:

license:            Apache-2.0
license-file:       LICENSE

author:             Mizunashi Mana
maintainer:         contact@mizunashi.work
copyright:          Mizunashi Mana <contact@mizunashi.work>

category:           Language
build-type:         Custom

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options:
        -Wall
        -Wcompat
        -Wincomplete-uni-patterns
        -Wmonomorphism-restriction
        -Wpartial-fields

common language
    default-language: GHC2021
    default-extensions:
        NoImplicitPrelude
        NoCUSKs
        NoStarIsType

        BlockArguments
        DerivingVia
        LambdaCase
        MagicHash
        MultiWayIf
        Strict
        TypeFamilies
        PatternSynonyms

custom-setup
    setup-depends:
        base,
        Cabal,
        cabal-doctest,

library
    import:
        warnings,
        language,

    hs-source-dirs:   src

    build-depends:
        base                            ^>=4.18.0.0,
        tlex                            ^>=0.5.0,
        tlex-encoding                   ^>=0.4.0,
        tlex-th                         ^>=0.4.1,
        ptera                           ^>=0.4.0,
        ptera-th                        ^>=0.7.0,
        enummapset                      ^>=0.7.1,
        template-haskell                ^>=2.20.0,
        conduit                         ^>=1.3.5,

        quell-prelude,
        quell-ast,

    exposed-modules:
        Language.Quell.Parsing.Spanned
        Language.Quell.Parsing.Lexer.Rules
        Language.Quell.Parsing.Lexer.CodeUnit
        Language.Quell.Parsing.Lexer.Input
        Language.Quell.Parsing.Lexer.Lexing
        Language.Quell.Parsing.Lexer.Lexing.KeywordLexing
        Language.Quell.Parsing.Lexer.Lexing.KeywordRules
        Language.Quell.Parsing.Lexer.Lexing.NumberLexing
        Language.Quell.Parsing.Lexer.Lexing.StringLexing

test-suite quell-parser-doctest
    import:
        warnings,
        language,
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test/doctest
    main-is:
        Doctest.hs
    build-depends:
        base,
        doctest,
        QuickCheck,
    autogen-modules:
        Build_doctests
    other-modules:
        Build_doctests

test-suite quell-parser-spec
    import:
        warnings,
        language,
    type: exitcode-stdio-1.0
    hs-source-dirs:
        test/spec
    main-is:
        HSpecDriver.hs
    ghc-options:
        -Wno-missing-home-modules
    build-tool-depends:
        hspec-discover:hspec-discover,
    build-depends:
        quell-prelude,
        quell-parser,
        hspec,
        QuickCheck,

        base,
        charset,
        enummapset,
