cabal-version:      3.4
name:               strik-parser
version:            0.1.0.0

synopsis:           A parser implementation of Strik
-- description:

license:            Apache-2.0

author:             Mizunashi Mana
maintainer:         contact@mizunashi.work
copyright:          Mizunashi Mana <contact@mizunashi.work>

category:           Language
build-type:         Custom

common warnings
    ghc-options:
        -Wall
        -Wcompat
        -Wincomplete-uni-patterns
        -Wmonomorphism-restriction
        -Wpartial-fields

common language
    default-language: GHC2021
    default-extensions:
        NoImplicitPrelude
        NoCUSKs
        NoStarIsType

        BlockArguments
        DataKinds
        DerivingVia
        LambdaCase
        MagicHash
        MultiWayIf
        Strict
        TypeFamilies
        PatternSynonyms

custom-setup
    setup-depends:
        base,
        Cabal,
        cabal-doctest,

library
    import:
        warnings,
        language,

    hs-source-dirs:   src

    build-depends:
        base                            ^>=4.18.0.0,
        tlex                            ^>=0.5.0,
        tlex-encoding                   ^>=0.4.0,
        tlex-th                         ^>=0.4.1,
        ptera                           ^>=0.4.0,
        ptera-th                        ^>=0.7.0,
        enummapset                      ^>=0.7.1,
        template-haskell                ^>=2.20.0,
        conduit                         ^>=1.3.5,

        strik-prelude,
        strik-ast,

    exposed-modules:
        Language.Strik.Parsing.Spanned
        Language.Strik.Parsing.Lexer.Rules
        Language.Strik.Parsing.Lexer.CodeUnit
        Language.Strik.Parsing.Lexer.Input
        Language.Strik.Parsing.Lexer.Lexing
        Language.Strik.Parsing.Lexer.Lexing.KeywordLexing
        Language.Strik.Parsing.Lexer.Lexing.KeywordRules
        Language.Strik.Parsing.Lexer.Lexing.NumberLexing
        Language.Strik.Parsing.Lexer.Lexing.NumberRules
        Language.Strik.Parsing.Lexer.Lexing.StringLexing
        Language.Strik.Parsing.Lexer.Lexing.StringRules
        Language.Strik.Parsing.Lexer.Lexing.CommentLexing
        Language.Strik.Parsing.Lexer.Lexing.CommentRules
        Language.Strik.Parsing.Parser.Rules
        Language.Strik.Parsing.Parser.Layout
        Language.Strik.Parsing.Parser.LiftTypes
        Language.Strik.Parsing.Parser.AstParsedTag

test-suite strik-parser-doctest
    import:
        warnings,
        language,
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test/doctest
    main-is:
        Doctest.hs
    build-depends:
        base,
        doctest,
        QuickCheck,
    autogen-modules:
        Build_doctests
    other-modules:
        Build_doctests

test-suite strik-parser-spec
    import:
        warnings,
        language,
    type: exitcode-stdio-1.0
    hs-source-dirs:
        test/spec
    main-is:
        HSpecDriver.hs
    ghc-options:
        -Wno-missing-home-modules
    build-tool-depends:
        hspec-discover:hspec-discover,
    build-depends:
        strik-prelude,
        strik-parser,
        hspec,
        QuickCheck,

        base,
        charset,
        enummapset,
